WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
167171
Additional selection tests and interpolation fix
https://bugs.webkit.org/show_bug.cgi?id=167171
Summary
Additional selection tests and interpolation fix
Megan Gardner
Reported
2017-01-18 13:05:29 PST
Additional selection tests and interpolation fix
Attachments
Patch
(16.36 KB, patch)
2017-01-18 13:08 PST
,
Megan Gardner
no flags
Details
Formatted Diff
Diff
Patch
(16.36 KB, patch)
2017-01-18 13:21 PST
,
Megan Gardner
simon.fraser
: review+
buildbot
: commit-queue-
Details
Formatted Diff
Diff
Archive of layout-test-results from ews121 for ios-simulator-wk2
(822.05 KB, application/zip)
2017-01-18 14:37 PST
,
Build Bot
no flags
Details
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Megan Gardner
Comment 1
2017-01-18 13:08:13 PST
Created
attachment 299169
[details]
Patch
Megan Gardner
Comment 2
2017-01-18 13:21:49 PST
Created
attachment 299173
[details]
Patch
Simon Fraser (smfr)
Comment 3
2017-01-18 13:32:55 PST
Comment on
attachment 299173
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=299173&action=review
> LayoutTests/fast/events/touch/ios/long-press-then-drag-left-to-change-selected-text.html:17 > + uiController.uiScriptComplete(); > + });
Weird spacing.
> LayoutTests/fast/events/touch/ios/long-press-then-drag-left-to-change-selected-text.html:35 > + {
I think canonical formatting would outdent this paren.
> LayoutTests/fast/events/touch/ios/long-press-then-drag-left-to-change-selected-text.html:83 > + testRunner.runUIScript(getDragScript(55,90,0,90), function(result) { > + if (document.getSelection().toString() == "aliqua. Ut")
I'm a bit concerned that small changes in text rendering (that often happen between OS releases) would break this test. Maybe make the text monospaced and of a fairly large size to reduce the likelihood.
> LayoutTests/fast/events/touch/ios/long-press-then-drag-left-to-change-selected-text.html:137 > + <meta name="viewport" content="initial-scale=1">
We usually put this at the top of the <head>. I think your test needs the flexibleViewport flag to make this do anything.
> LayoutTests/fast/events/touch/ios/long-press-then-drag-right-to-change-selected-text.html:16 > + uiController.uiScriptComplete();
Ditto.
Build Bot
Comment 4
2017-01-18 14:37:17 PST
Comment on
attachment 299173
[details]
Patch
Attachment 299173
[details]
did not pass ios-sim-ews (ios-simulator-wk2): Output:
http://webkit-queues.webkit.org/results/2911371
New failing tests: scrollingcoordinator/ios/sync-layer-positions-after-scroll.html
Build Bot
Comment 5
2017-01-18 14:37:20 PST
Created
attachment 299186
[details]
Archive of layout-test-results from ews121 for ios-simulator-wk2 The attached test failures were seen while running run-webkit-tests on the ios-sim-ews. Bot: ews121 Port: ios-simulator-wk2 Platform: Mac OS X 10.11.6
Megan Gardner
Comment 6
2017-01-19 15:27:16 PST
Failing test still fails with change removed. Ignoring, and submitting.
Megan Gardner
Comment 7
2017-01-19 15:32:28 PST
https://trac.webkit.org/changeset/210941
Alexey Proskuryakov
Comment 8
2017-01-21 23:46:08 PST
This actually did break scrollingcoordinator/ios/sync-layer-positions-after-scroll.html on bots:
https://webkit-test-results.webkit.org/dashboards/flakiness_dashboard.html#showAllRuns=true&tests=scrollingcoordinator%2Fios%2Fsync-layer-positions-after-scroll.html
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug