Additional selection tests and interpolation fix https://bugs.webkit.org/show_bug.cgi?id=167171

Reviewed by Simon Fraser.

Tools:

We weren't adding the final event when interpolating event streams.

* WebKitTestRunner/ios/HIDEventGenerator.mm:
(-[HIDEventGenerator interpolatedEvents:]):

LayoutTests:

Selections tests for dragging left and right.
Factored out common functions used across tests.

* fast/events/touch/ios/long-press-then-drag-left-to-change-selected-text-expected.txt: Added.
* fast/events/touch/ios/long-press-then-drag-left-to-change-selected-text.html: Added.
* fast/events/touch/ios/long-press-then-drag-right-to-change-selected-text-expected.txt: Added.
* fast/events/touch/ios/long-press-then-drag-right-to-change-selected-text.html: Added.
* fast/events/touch/ios/resources: Added.
* fast/events/touch/ios/resources/basic-gestures.js: Added.
(pressAtPoint):
(dragFromPointToPoint):



Canonical link: https://commits.webkit.org/184269@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@210941 268f45cc-cd09-0410-ab3c-d52691b4dbfc